--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -94,7 +94,7 @@ address = {street = "", city = "Trondheim", region = "", postcode = "", country 
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
-coordinates = {latitude = "", longitude = ""}
+coordinates = {latitude = "63.417636", longitude = "10.403930"}
 
 # Directions for visitors to locate you.
 directions = ""
