--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -233,7 +233,7 @@ plugins_js  = []
   # and choose a map provider below.
   #
   # To use Google Maps, set `engine` to 1 and enter your API key that can be obtained here:
-  #   https://developers.google.com/maps/documentation/javascript/get-api-key
+  #   
   # To use OpenStreetMap tiles, set `engine` to 2.
   # To use OpenStreetMap on a high traffic site, set `engine` to 3 and enter your API key that can be obtained here:
   #   https://www.mapbox.com/studio/account/tokens
@@ -243,8 +243,8 @@ plugins_js  = []
   #   1: Google Maps
   #   2: OpenStreetMap (Mapnik)
   #   3: OpenStreetMap (Mapbox)
-  engine = 2
-  api_key = ""
+  engine = 1
+  api_key = "AIzaSyCkg0wSqR9SaoL8gAlfDe-IdSpy6aHplXg"
   zoom = 15
 
 ############################
